<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/ly_top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bg_topbar">

        <TextView
            android:id="@+id/txt_topbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/text_topbar"
            android:textSize="18sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_alignParentBottom="true"
            android:background="@color/div_white" />

    </RelativeLayout>



    <Button
        android:id="@+id/search_bt_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_button_text_1"/>

    <Button
        android:id="@+id/search_bt_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_button_text_2"/>

    <Button
        android:id="@+id/search_bt_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_button_text_3"/>

    <Button
        android:id="@+id/search_bt_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_button_text_4"/>

    <Button
        android:id="@+id/search_bt_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_button_text_5"/>

    <Button
        android:id="@+id/search_bt_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_button_text_6"/>

</LinearLayout>