<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/ly_top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bg_topbar">

        <TextView
            android:id="@+id/txt_topbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/text_topbar"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/search_theory_ib"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_above="@+id/view2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#00000000"
            app:srcCompat="@android:drawable/ic_menu_search"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_alignParentBottom="true"
            android:background="@color/div_white"
            android:id="@+id/view2"/>

    </RelativeLayout>



    <Button
        android:id="@+id/theory_bt_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theory_button_text_1"/>

    <Button
        android:id="@+id/theory_bt_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theory_button_text_2"/>

    <Button
        android:id="@+id/theory_bt_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theory_button_text_3"/>

    <Button
        android:id="@+id/theory_bt_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theory_button_text_4"/>

    <Button
        android:id="@+id/theory_bt_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theory_button_text_5"/>

    <Button
        android:id="@+id/theory_bt_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theory_button_text_6"/>

</LinearLayout>