<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/bg_gray">


    <RelativeLayout
        android:id="@+id/ly_top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bg_topbar">

        <TextView
            android:id="@+id/txt_topbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/tab_menu_repair"
            android:textColor="@color/text_topbar"
            android:textSize="18sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/div_white"
            android:id="@+id/view3"/>

        <ImageButton
            android:id="@+id/search_repair_ib"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_above="@+id/view3"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="#00000000"
            app:srcCompat="@android:drawable/ic_menu_search"/>


    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"/>


    <Button
        android:id="@+id/repair_bt_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:background="@drawable/btn_bottom_confirm_bg"
        android:gravity="center"
        android:text="@string/repair_button_text_1"/>

    <Button
        android:id="@+id/repair_bt_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:background="@drawable/btn_bottom_confirm_bg"
        android:gravity="center"
        android:text="@string/repair_button_text_2"/>

    <Button
        android:id="@+id/repair_bt_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:background="@drawable/btn_bottom_confirm_bg"
        android:gravity="center"
        android:text="@string/repair_button_text_3"/>

    <Button
        android:id="@+id/repair_bt_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:background="@drawable/btn_bottom_confirm_bg"
        android:gravity="center"
        android:text="@string/repair_button_text_4"/>

</LinearLayout>