<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:weightSum="3"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:baselineAligned="false">

    <LinearLayout
        android:paddingTop="5dp"
        android:id="@+id/ll_item4"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <TextView
            android:paddingTop="2dp"
            android:id="@+id/tv_name4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/textSize_13"
            android:text="@string/home_button_text_4"
            android:textColor="@color/bg_black"
            android:drawableTop="@mipmap/home_iv_4"/>
    </LinearLayout>

    <LinearLayout
        android:paddingTop="5dp"
        android:id="@+id/ll_item5"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <TextView
            android:paddingTop="2dp"
            android:id="@+id/tv_name5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/textSize_13"
            android:text="@string/home_button_text_5"
            android:textColor="@color/bg_black"
            android:drawableTop="@mipmap/home_iv_5"/>
    </LinearLayout>

    <LinearLayout
        android:paddingTop="5dp"
        android:id="@+id/ll_item6"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <TextView
            android:paddingTop="2dp"
            android:id="@+id/tv_name6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/textSize_13"
            android:text="@string/home_button_text_6"
            android:textColor="@color/bg_black"
            android:drawableTop="@mipmap/home_iv_6"/>
    </LinearLayout>


</LinearLayout>