<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_marginTop="5dp"
              android:orientation="vertical"
              android:weightSum="2"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/app_gray"/>

    <LinearLayout
        android:id="@+id/ll_item7"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home_item_tv_7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/home_button_text_7"
            android:textSize="@dimen/textSize_16"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/bg_black"
            android:drawableLeft="@mipmap/home_iv_7"
            android:drawableStart="@mipmap/home_iv_7"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/div_white"/>

    <LinearLayout
        android:id="@+id/ll_item8"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home_item_tv_8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/home_button_text_8"
            android:textSize="@dimen/textSize_16"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/bg_black"
            android:drawableLeft="@mipmap/home_iv_8"
            android:drawableStart="@mipmap/home_iv_8"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/div_white"/>

    <LinearLayout
        android:id="@+id/ll_item9"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home_item_tv_9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/home_button_text_9"
            android:textSize="@dimen/textSize_16"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/bg_black"
            android:drawableLeft="@mipmap/home_iv_8"
            android:drawableStart="@mipmap/home_iv_8"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/div_white"/>

    </LinearLayout>


</LinearLayout>