<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <com.youth.banner.Banner
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="200dp" />


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <LinearLayout

                    android:id="@+id/ll_item1"
                    android:gravity="center"
                    android:padding="2.5dp"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/list_view_item_click"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_name1"
                        android:paddingTop="2dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/home_button_text_1"
                        android:textSize="@dimen/textSize_13"
                        android:textColor="@color/bg_black"
                        android:drawableTop="@drawable/home_iv_1"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_item2"
                    android:gravity="center"
                    android:padding="2.5dp"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/list_view_item_click"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_name2"
                        android:paddingTop="2dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/home_button_text_2"
                        android:textSize="@dimen/textSize_13"
                        android:textColor="@color/bg_black"
                        android:drawableTop="@drawable/home_iv_2"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_item3"
                    android:gravity="center"
                    android:padding="2.5dp"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/list_view_item_click">

                    <TextView
                        android:paddingTop="2dp"
                        android:id="@+id/tv_name3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/home_button_text_3"
                        android:textSize="@dimen/textSize_13"
                        android:textColor="@color/bg_black"
                        android:drawableTop="@drawable/home_iv_3"/>
                </LinearLayout>
            </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/div_white"/>

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <LinearLayout
                    android:paddingTop="5dp"
                    android:id="@+id/ll_item4"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/list_view_item_click"
                    android:layout_height="wrap_content">

                    <TextView
                        android:paddingTop="2dp"
                        android:id="@+id/tv_name4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="@dimen/textSize_13"
                        android:text="@string/home_button_text_4"
                        android:textColor="@color/bg_black"
                        android:drawableTop="@drawable/home_iv_4"/>
                </LinearLayout>

                <LinearLayout
                    android:paddingTop="5dp"
                    android:id="@+id/ll_item5"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/list_view_item_click"
                    android:layout_height="wrap_content">

                    <TextView
                        android:paddingTop="2dp"
                        android:id="@+id/tv_name5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="@dimen/textSize_13"
                        android:text="@string/home_button_text_5"
                        android:textColor="@color/bg_black"
                        android:drawableTop="@drawable/home_iv_5"/>
                </LinearLayout>

                <LinearLayout
                    android:paddingTop="5dp"
                    android:id="@+id/ll_item6"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/list_view_item_click"
                    android:layout_height="wrap_content">

                    <TextView
                        android:paddingTop="2dp"
                        android:id="@+id/tv_name6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="@dimen/textSize_13"
                        android:text="@string/home_button_text_6"
                        android:textColor="@color/bg_black"
                        android:drawableTop="@drawable/home_iv_6"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="vertical"
                          android:weightSum="2"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/transparent"/>

                <LinearLayout
                    android:id="@+id/ll_item7"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/list_view_item_click"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/home_item_tv_7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/home_button_text_7"
                        android:textSize="@dimen/textSize_16"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:textColor="@color/bg_black"
                        android:drawableLeft="@drawable/home_iv_7"
                        android:drawableStart="@drawable/home_iv_7"
                        />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/div_white"/>
            </LinearLayout>

    </LinearLayout>
    </LinearLayout>
</ScrollView>